--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url(header.css);
-@import url(banner.css);
-@import url(carrossel.css);
-@import url(Tópicos.css);
-@import url(contato.css);
-@import url(rodapé.css);
+@import url(style/header.css);
+@import url(style/banner.css);
+@import url(style/carrossel.css);
+@import url(style/Tópicos.css);
+@import url(style/contato.css);
+@import url(style/rodapé.css);
 
 :root{
     --cor-de-fundo: #ebecee;
